<resources>
    <string name="app_name">chance1</string>
    <string name="ahmed_hassan">Ahmed Hassan</string>
    <string name="job_title">Engineer</string>
    <string name="country_name">UK</string>
    <string name="reviews_number">(150 Reviews)</string>
    <string name="rate">4.5</string>
    <string name="Number_of_working_hours">3 hr</string>
    <string name="nationallity">Russian</string>
    <string name="latest_update">5 Days ago</string>

</resources>