<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    app:cardBackgroundColor="@color/backcolor"
    app:cardCornerRadius="8dp"
    app:cardElevation="@dimen/_4sdp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_personphoto"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="8dp"
            android:foreground="@drawable/person"
            app:cardCornerRadius="@dimen/_8sdp"
            app:cardElevation="@dimen/_2sdp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin"
                android:fontFamily="@font/dm_sans_bold"
                android:text="@string/ahmed_hassan"
                android:textColor="@color/black"
                android:textSize="@dimen/titleTextSize" />

            <TextView
                android:id="@+id/text_job"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/dm_sans_medium"
                android:text="@string/job_title"
                android:textColor="@color/lightblack"
                android:textSize="@dimen/smallTextSize" />

            <TextView
                android:id="@+id/text_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:drawablePadding="4dp"
                android:fontFamily="@font/dm_sans"
                android:text="@string/country_name"
                android:textSize="@dimen/specialTextSize"
                app:drawableStartCompat="@drawable/ic_baseline_location_on_24" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_number_of_reviews"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/dm_sans"
                    android:text="@string/reviews_number"
                    android:textColor="@color/black"
                    android:textSize="@dimen/specialTextSize" />

                <TextView
                    android:id="@+id/text_rate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:drawablePadding="4dp"
                    android:fontFamily="@font/dm_sans_medium"
                    android:gravity="center"
                    android:text="@string/rate"
                    android:textColor="@color/black"
                    android:textSize="@dimen/specialTextSize"
                    app:drawableEndCompat="@drawable/ic_baseline_star_rate_24" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/button_background_red"
                android:paddingHorizontal="@dimen/_8sdp"
                android:paddingVertical="@dimen/_2sdp"
                android:text="@string/Number_of_working_hours"
                android:textColor="@color/white"
                android:textSize="@dimen/specialTextSize"

                />

            <TextView
                android:id="@+id/text_nationality"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/dm_sans_medium"
                android:text="@string/nationallity"
                android:textColor="@color/lightblack"
                android:textSize="@dimen/specialTextSize" />

            <TextView
                android:id="@+id/text_latest_update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/dm_sans"
                android:text="@string/latest_update"
                android:textSize="@dimen/specialTextSize" />
        </LinearLayout>
    </LinearLayout>


</androidx.cardview.widget.CardView>

